--- a/index.html
+++ b/index.html
@@ -2,116 +2,136 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Stacja Pogodowa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #121212;
-      color: #ffffff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    h1 {
-      margin: 30px 0 20px;
-      font-size: 2rem;
-      color: #00bcd4;
-    }
-
-    .karta {
-      background: #1e1e1e;
-      border-radius: 20px;
-      padding: 25px 35px;
-      margin: 10px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-
-    .karta:hover {
-      transform: scale(1.03);
-    }
-
-    .ikona {
-      font-size: 2.2em;
-      margin-bottom: 10px;
-      color: #00bcd4;
-    }
-
-    .etykieta {
-      font-size: 1.1em;
-      color: #cccccc;
-    }
-
-    .wartosc {
-      font-size: 2.2em;
-      margin-top: 5px;
-      color: #ffcc00;
-      opacity: 0;
-      animation: fadeIn 1s forwards;
-    }
-
-    footer {
-      margin: 40px 0;
-      font-size: 0.9em;
-      color: #777;
-    }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-  </style>
+  <title>Stacja Pogodowa</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <h1>Stacja Pogodowa</h1>
 
-  <div class="karta">
-    <div class="ikona"><i class="fas fa-thermometer-half"></i></div>
-    <div class="etykieta">Temperatura</div>
-    <div class="wartosc" id="temp">...</div>
+  <div>
+    <p id="temp">Temperatura: Ładowanie...</p>
+    <p id="press">Ciśnienie: Ładowanie...</p>
+    <p id="hum">Wilgotność: Ładowanie...</p>
   </div>
 
-  <div class="karta">
-    <div class="ikona"><i class="fas fa-tachometer-alt"></i></div>
-    <div class="etykieta">Ciśnienie</div>
-    <div class="wartosc" id="press">...</div>
+  <div>
+    <canvas id="wykresTemp" width="400" height="200"></canvas>
+    <canvas id="wykresCisnienie" width="400" height="200"></canvas>
+    <canvas id="wykresWilgotnosc" width="400" height="200"></canvas>
   </div>
-
-  <div class="karta">
-    <div class="ikona"><i class="fas fa-tint"></i></div>
-    <div class="etykieta">Wilgotność</div>
-    <div class="wartosc" id="hum">...</div>
-  </div>
-
-  <footer>© Twoja Stacja Blynk</footer>
 
   <script>
-    const token = '_O5rM65Y3601TBQj8_liz3kTfPEk5S1D';
+    const tempHistoria = [];
+    const pressHistoria = [];
+    const humHistoria = [];
+    const czasHistoria = [];
+    const maxPunktow = 10;
+
+    const ctxTemp = document.getElementById('wykresTemp').getContext('2d');
+    const wykresTemp = new Chart(ctxTemp, {
+      type: 'line',
+      data: {
+        labels: czasHistoria,
+        datasets: [{
+          label: 'Temperatura (°C)',
+          data: tempHistoria,
+          backgroundColor: 'rgba(0, 188, 212, 0.2)',
+          borderColor: '#00bcd4',
+          borderWidth: 2,
+          tension: 0.4
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: false
+          }
+        }
+      }
+    });
+
+    const ctxPress = document.getElementById('wykresCisnienie').getContext('2d');
+    const wykresPress = new Chart(ctxPress, {
+      type: 'line',
+      data: {
+        labels: czasHistoria,
+        datasets: [{
+          label: 'Ciśnienie (hPa)',
+          data: pressHistoria,
+          backgroundColor: 'rgba(255, 99, 132, 0.2)',
+          borderColor: '#ff6384',
+          borderWidth: 2,
+          tension: 0.4
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: false
+          }
+        }
+      }
+    });
+
+    const ctxHum = document.getElementById('wykresWilgotnosc').getContext('2d');
+    const wykresHum = new Chart(ctxHum, {
+      type: 'line',
+      data: {
+        labels: czasHistoria,
+        datasets: [{
+          label: 'Wilgotność (%)',
+          data: humHistoria,
+          backgroundColor: 'rgba(153, 102, 255, 0.2)',
+          borderColor: '#9966ff',
+          borderWidth: 2,
+          tension: 0.4
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: false
+          }
+        }
+      }
+    });
+
+    function aktualizujWykres(dane, historia, wykres) {
+      const teraz = new Date();
+      const czas = `${teraz.getHours()}:${teraz.getMinutes().toString().padStart(2, '0')}`;
+      
+      if (historia.length >= maxPunktow) {
+        historia.shift();
+        czasHistoria.shift();
+      }
+
+      historia.push(parseFloat(dane));
+      czasHistoria.push(czas);
+      wykres.update();
+    }
 
     async function odswiezDane() {
       try {
-        const temp = await fetch(`https://blynk.cloud/external/api/get?token=${token}&v1`).then(r => r.text());
-        const press = await fetch(`https://blynk.cloud/external/api/get?token=${token}&v2`).then(r => r.text());
-        const hum = await fetch(`https://blynk.cloud/external/api/get?token=${token}&v3`).then(r => r.text());
+        const temp = await fetch(`https://blynk.cloud/external/api/get?token=TWÓJ_TOKEN&v1`).then(r => r.text());
+        const press = await fetch(`https://blynk.cloud/external/api/get?token=TWÓJ_TOKEN&v2`).then(r => r.text());
+        const hum = await fetch(`https://blynk.cloud/external/api/get?token=TWÓJ_TOKEN&v3`).then(r => r.text());
 
-        document.getElementById('temp').textContent = `${temp} °C`;
-        document.getElementById('press').textContent = `${press} hPa`;
-        document.getElementById('hum').textContent = `${hum} %`;
+        document.getElementById('temp').textContent = `Temperatura: ${temp} °C`;
+        document.getElementById('press').textContent = `Ciśnienie: ${press} hPa`;
+        document.getElementById('hum').textContent = `Wilgotność: ${hum} %`;
+
+        aktualizujWykres(temp, tempHistoria, wykresTemp);
+        aktualizujWykres(press, pressHistoria, wykresPress);
+        aktualizujWykres(hum, humHistoria, wykresHum);
       } catch (e) {
         console.error('Błąd pobierania danych:', e);
       }
     }
 
-    setInterval(odswiezDane, 300000); // co 5 minut
-    odswiezDane(); // pierwsze pobranie od razu
+    setInterval(odswiezDane, 600000); // Odświeżaj dane co 10 minut (600 000 ms)
+
+    odswiezDane(); // Pierwsze odświeżenie zaraz po załadowaniu strony
   </script>
 </body>
 </html>
