--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <script>
         // Twój token Blynk
-        const BLYNK_TOKEN = "TWÓJ_TOKEN";
+        const BLYNK_TOKEN = "O5rM65Y3601TBQj8_liz3kTfPEk5S1D"; // Wstaw tutaj Twój token
 
         async function pobierzDane() {
             try {
