--- a/index.html
+++ b/index.html
@@ -1,87 +1,137 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stacja Pogodowa</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f4f4f9;
-        }
-        h1 {
-            margin-top: 50px;
-        }
-        #weather {
-            margin-top: 30px;
-            font-size: 24px;
-        }
-        .data-box {
-            margin: 10px;
-            font-size: 20px;
-            background: #fff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            display: inline-block;
-            min-width: 150px;
-        }
-        .data-box span {
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stacja Pogodowa</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+      background: #f4f4f4;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      font-size: 1.2em;
+    }
+    canvas {
+      margin: 20px auto;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-    <h1>Stacja Pogodowa</h1>
-    <div id="weather">
-        <div class="data-box" id="temp">Temperatura: Ładowanie...</div>
-        <div class="data-box" id="press">Ciśnienie: Ładowanie...</div>
-        <div class="data-box" id="hum">Wilgotność: Ładowanie...</div>
-    </div>
+  <h1>Stacja Pogodowa</h1>
 
-    <script>
-        // Twój token Blynk
-        const BLYNK_TOKEN = "O5rM65Y3601TBQj8_liz3kTfPEk5S1D"; // Wstaw tutaj Twój token
+  <div>
+    <p id="temp">Temperatura: Ładowanie...</p>
+    <p id="press">Ciśnienie: Ładowanie...</p>
+    <p id="hum">Wilgotność: Ładowanie...</p>
+  </div>
 
-        async function pobierzDane() {
-            try {
-                // Pobierz dane z Blynk dla temperatury (pin v1)
-                const tempResponse = await fetch(`https://blynk.cloud/external/api/get?token=${BLYNK_TOKEN}&v1`);
-                const tempData = await tempResponse.json();
-                const temp = tempData[0]; // Zakładając, że odpowiedź zawiera wartość temperatury
+  <div>
+    <canvas id="wykresTemp" width="400" height="200"></canvas>
+    <canvas id="wykresCisnienie" width="400" height="200"></canvas>
+    <canvas id="wykresWilgotnosc" width="400" height="200"></canvas>
+  </div>
 
-                // Pobierz dane z Blynk dla ciśnienia (pin v2)
-                const pressResponse = await fetch(`https://blynk.cloud/external/api/get?token=${BLYNK_TOKEN}&v2`);
-                const pressData = await pressResponse.json();
-                const pressure = pressData[0]; // Zakładając, że odpowiedź zawiera wartość ciśnienia
+  <script>
+    const BLYNK_TOKEN = "O5rM65Y3601TBQj8_liz3kTfPEk5S1D";
+    const tempHistoria = [];
+    const pressHistoria = [];
+    const humHistoria = [];
+    const czasHistoria = [];
+    const maxPunktow = 10;
 
-                // Pobierz dane z Blynk dla wilgotności (pin v3)
-                const humResponse = await fetch(`https://blynk.cloud/external/api/get?token=${BLYNK_TOKEN}&v3`);
-                const humData = await humResponse.json();
-                const humidity = humData[0]; // Zakładając, że odpowiedź zawiera wartość wilgotności
+    const ctxTemp = document.getElementById('wykresTemp').getContext('2d');
+    const wykresTemp = new Chart(ctxTemp, {
+      type: 'line',
+      data: {
+        labels: czasHistoria,
+        datasets: [{
+          label: 'Temperatura (°C)',
+          data: tempHistoria,
+          backgroundColor: 'rgba(0, 188, 212, 0.2)',
+          borderColor: '#00bcd4',
+          borderWidth: 2,
+          tension: 0.4
+        }]
+      },
+      options: { scales: { y: { beginAtZero: false } } }
+    });
 
-                // Wyświetl dane na stronie
-                document.getElementById('temp').textContent = `Temperatura: ${temp} °C`;
-                document.getElementById('press').textContent = `Ciśnienie: ${pressure} hPa`;
-                document.getElementById('hum').textContent = `Wilgotność: ${humidity} %`;
+    const ctxPress = document.getElementById('wykresCisnienie').getContext('2d');
+    const wykresPress = new Chart(ctxPress, {
+      type: 'line',
+      data: {
+        labels: czasHistoria,
+        datasets: [{
+          label: 'Ciśnienie (hPa)',
+          data: pressHistoria,
+          backgroundColor: 'rgba(255, 99, 132, 0.2)',
+          borderColor: '#ff6384',
+          borderWidth: 2,
+          tension: 0.4
+        }]
+      },
+      options: { scales: { y: { beginAtZero: false } } }
+    });
 
-            } catch (error) {
-                console.error("Błąd podczas pobierania danych:", error);
-                // Wyświetl błąd na stronie
-                document.getElementById('temp').textContent = "Błąd ładowania danych";
-                document.getElementById('press').textContent = "Błąd ładowania danych";
-                document.getElementById('hum').textContent = "Błąd ładowania danych";
-            }
-        }
+    const ctxHum = document.getElementById('wykresWilgotnosc').getContext('2d');
+    const wykresHum = new Chart(ctxHum, {
+      type: 'line',
+      data: {
+        labels: czasHistoria,
+        datasets: [{
+          label: 'Wilgotność (%)',
+          data: humHistoria,
+          backgroundColor: 'rgba(153, 102, 255, 0.2)',
+          borderColor: '#9966ff',
+          borderWidth: 2,
+          tension: 0.4
+        }]
+      },
+      options: { scales: { y: { beginAtZero: false } } }
+    });
 
-        // Odśwież dane co 10 minut
-        setInterval(pobierzDane, 10 * 60 * 1000);
+    function aktualizujWykres(dane, historia, wykres) {
+      const teraz = new Date();
+      const czas = `${teraz.getHours()}:${teraz.getMinutes().toString().padStart(2, '0')}`;
+      if (historia.length >= maxPunktow) {
+        historia.shift();
+        czasHistoria.shift();
+      }
+      historia.push(parseFloat(dane));
+      czasHistoria.push(czas);
+      wykres.update();
+    }
 
-        // Załaduj dane po załadowaniu strony
-        pobierzDane();
-    </script>
+    async function odswiezDane() {
+      try {
+        const temp = await fetch(`https://blynk.cloud/external/api/get?token=${BLYNK_TOKEN}&v1`).then(r => r.text());
+        const press = await fetch(`https://blynk.cloud/external/api/get?token=${BLYNK_TOKEN}&v2`).then(r => r.text());
+        const hum = await fetch(`https://blynk.cloud/external/api/get?token=${BLYNK_TOKEN}&v3`).then(r => r.text());
+
+        document.getElementById('temp').textContent = `Temperatura: ${temp} °C`;
+        document.getElementById('press').textContent = `Ciśnienie: ${press} hPa`;
+        document.getElementById('hum').textContent = `Wilgotność: ${hum} %`;
+
+        aktualizujWykres(temp, tempHistoria, wykresTemp);
+        aktualizujWykres(press, pressHistoria, wykresPress);
+        aktualizujWykres(hum, humHistoria, wykresHum);
+      } catch (e) {
+        console.error('Błąd pobierania danych:', e);
+      }
+    }
+
+    setInterval(odswiezDane, 600000); // Odświeżaj dane co 10 minut (600 000 ms)
+    odswiezDane(); // Pierwsze pobranie danych
+  </script>
 </body>
 </html>
