--- a/index.html
+++ b/index.html
@@ -8,17 +8,32 @@
     body {
       background-color: #121212;
       color: #ffffff;
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      text-align: center;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
     }
+
+    h1 {
+      margin-bottom: 40px;
+    }
+
     .dane {
       font-size: 1.5em;
       margin: 15px 0;
-      padding: 10px;
-      border-radius: 10px;
+      padding: 20px;
+      width: 100%;
+      max-width: 400px;
+      border-radius: 15px;
       background-color: #1e1e1e;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      transition: background-color 0.3s, transform 0.3s;
+    }
+
+    .dane:hover {
+      background-color: #2c2c2c;
+      transform: scale(1.02);
     }
   </style>
 </head>
@@ -29,22 +44,30 @@
   <div class="dane" id="hum">Wilgotność: Ładowanie...</div>
 
   <script>
-    const token = "O5rM65Y3601TBQj8_liz3kTfPEk5S1D"; // Twój token Blynk
+    const token = "_O5rM65Y3601TBQj8_liz3kTfPEk5S1D";
+    const apiBase = `https://blynk.cloud/external/api/get?token=${token}`;
+
+    async function pobierzDane(pin) {
+      const response = await fetch(`${apiBase}&${pin}`);
+      return await response.text();
+    }
 
     async function odswiezDane() {
       try {
-        const temp = await fetch(`https://blynk.cloud/external/api/get?token=${token}&v1`).then(r => r.text());
-        const press = await fetch(`https://blynk.cloud/external/api/get?token=${token}&v2`).then(r => r.text());
-        const hum = await fetch(`https://blynk.cloud/external/api/get?token=${token}&v3`).then(r => r.text());
+        const [temp, press, hum] = await Promise.all([
+          pobierzDane("v1"),
+          pobierzDane("v2"),
+          pobierzDane("v3")
+        ]);
 
         document.getElementById('temp').textContent = `Temperatura: ${temp} °C`;
         document.getElementById('press').textContent = `Ciśnienie: ${press} hPa`;
         document.getElementById('hum').textContent = `Wilgotność: ${hum} %`;
-      } catch (e) {
-        document.getElementById('temp').textContent = `Błąd pobierania danych`;
-        document.getElementById('press').textContent = `Błąd pobierania danych`;
-        document.getElementById('hum').textContent = `Błąd pobierania danych`;
-        console.error("Błąd:", e);
+      } catch (err) {
+        console.error("Błąd pobierania danych:", err);
+        document.getElementById('temp').textContent = "Błąd pobierania temperatury";
+        document.getElementById('press').textContent = "Błąd pobierania ciśnienia";
+        document.getElementById('hum').textContent = "Błąd pobierania wilgotności";
       }
     }
 
